feat(daily-count): 添加重新统计接口；优化每日统计逻辑
- 优化每日统计数据的更新逻辑，保留数值更大的字段
