# test/openapi.json
@@ -4222,6 +4222,121 @@
                 ]
             }
         },
+        "/api/daily-count/reCount/option": {
+            "get": {
+                "operationId": "DailyCount_reCountOption",
+                "summary": "获取 重新统计接口 option",
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Option"
+                                }
+                            }
+                        }
+                    },
+                    "201": {
+                        "description": "创建成功"
+                    },
+                    "400": {
+                        "description": "数据格式有误"
+                    },
+                    "401": {
+                        "description": "没有权限访问"
+                    },
+                    "403": {
+                        "description": "该用户没有权限访问"
+                    },
+                    "404": {
+                        "description": "找不到要访问的接口"
+                    },
+                    "408": {
+                        "description": "请求超时"
+                    },
+                    "409": {
+                        "description": "请求时发生了冲突"
+                    },
+                    "429": {
+                        "description": "请求次数超限"
+                    },
+                    "500": {
+                        "description": "服务器内部错误"
+                    },
+                    "502": {
+                        "description": "代理服务器错误"
+                    }
+                },
+                "tags": [
+                    "daily-count"
+                ]
+            }
+        },
+        "/api/daily-count/reCount": {
+            "post": {
+                "operationId": "DailyCount_reCount",
+                "summary": "重新统计接口",
+                "description": "需要在后台手动执行，将一定时间内的日志重新统计",
+                "parameters": [],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ReCountDto"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "响应成功"
+                    },
+                    "201": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ResponseDto"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "数据格式有误"
+                    },
+                    "401": {
+                        "description": "没有权限访问"
+                    },
+                    "403": {
+                        "description": "该用户没有权限访问"
+                    },
+                    "404": {
+                        "description": "找不到要访问的接口"
+                    },
+                    "408": {
+                        "description": "请求超时"
+                    },
+                    "409": {
+                        "description": "请求时发生了冲突"
+                    },
+                    "429": {
+                        "description": "请求次数超限"
+                    },
+                    "500": {
+                        "description": "服务器内部错误"
+                    },
+                    "502": {
+                        "description": "代理服务器错误"
+                    }
+                },
+                "tags": [
+                    "daily-count"
+                ]
+            }
+        },
         "/api/daily-count/config": {
             "get": {
                 "operationId": "DailyCount_config",
@@ -7891,6 +8006,20 @@
                     "uptime"
                 ]
             },
+            "ReCountDto": {
+                "type": "object",
+                "properties": {
+                    "dayNum": {
+                        "type": "number",
+                        "title": "天数",
+                        "description": "默认为 30 天内",
+                        "example": 30
+                    }
+                },
+                "required": [
+                    "dayNum"
+                ]
+            },
             "DailyCount": {
                 "type": "object",
                 "properties": {
@@ -7930,6 +8059,36 @@
                         "type": "number",
                         "title": "Webhook和通知日志数量",
                         "example": 233
+                    },
+                    "feedCount": {
+                        "type": "number",
+                        "title": "RSS订阅源数量",
+                        "example": 233
+                    },
+                    "categoryCount": {
+                        "type": "number",
+                        "title": "分类数量",
+                        "example": 233
+                    },
+                    "hookCount": {
+                        "type": "number",
+                        "title": "Hook数量",
+                        "example": 233
+                    },
+                    "customQueryCount": {
+                        "type": "number",
+                        "title": "自定义查询数量",
+                        "example": 233
+                    },
+                    "proxyConfigCount": {
+                        "type": "number",
+                        "title": "代理数量",
+                        "example": 233
+                    },
+                    "userCount": {
+                        "type": "number",
+                        "title": "用户数量",
+                        "example": 233
                     }
                 },
                 "required": [
@@ -7939,7 +8098,13 @@
                     "date",
                     "articleCount",
                     "resourceCount",
-                    "webhookLogCount"
+                    "webhookLogCount",
+                    "feedCount",
+                    "categoryCount",
+                    "hookCount",
+                    "customQueryCount",
+                    "proxyConfigCount",
+                    "userCount"
                 ]
             },
             "FindDailyCount": {
